--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
         <main>
             <label>
                 Converter <b>de</b>
-                <select>
+                <select id="selection">
                     <option>
                         R$ Real brasileiro
+                    </option>
+                    <option>
+                        US$ Dólar americano
+                    </option>
+                    <option>
+                        € Euro
+                    </option>
+                    <option>
+                        ₿ Bitcoin
                     </option>
 
                 </select>
@@ -34,10 +43,16 @@
                 Converter <b>para</b>
                 <select id="currency-select">
                     <option>
+                        R$ Real brasileiro
+                    </option>
+                    <option>
                         US$ Dólar americano
                     </option>
                     <option>
                         € Euro
+                    </option>
+                    <option>
+                        ₿ Bitcoin
                     </option>
 
                 </select>
@@ -53,8 +68,8 @@
 
             <section>
                 <div class="currency-container">
-                    <img src="./assets/brasil.png" alt="bandeira-brasil">
-                    <p class="currency-name">Real</p>
+                    <img src="./assets/brasil.png" id="currency-img1" alt="bandeira-brasil">
+                    <p class="currency-name" id="currency-name1">Real</p>
                     <p class="currency-value" id="real-value-text">R$ 10.000,00</p>
                 </div>
 
